enrich litigant name in task details